--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90806a">  <td>22/09/18 11:19:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.dataSetUp()[pri:0, instance:testcases.SimplilearnLogin@48f278eb]">&gt;&gt;dataSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="90806a">  <td>22/09/18 11:20:07</td>   <td>17847</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.dataClean()[pri:0, instance:testcases.SimplilearnLogin@48f278eb]">&lt;&lt;dataClean</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="90806a">  <td>22/09/18 11:20:05</td>   <td>15410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLogin@48f278eb]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="99bec8">  <td>22/09/18 11:19:52</td>   <td>2888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test3()[pri:0, instance:testcases.SimplilearnLogin@48f278eb]">Test3</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="90806a">  <td>22/09/18 11:19:50</td>   <td>457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLogin@48f278eb]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1646371921</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>22/09/22 23:53:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7787a5">  <td>22/09/22 23:53:24</td>   <td>1833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test3()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">Test3</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>22/09/22 23:53:53</td>   <td>30924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>22/09/22 23:53:56</td>   <td>33327</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.dataClean()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&lt;&lt;dataClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>22/09/22 23:53:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7787a5">  <td>22/09/22 23:53:13</td>   <td>-9455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test1()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">Test1</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>22/09/22 23:53:53</td>   <td>30924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>22/09/22 23:53:11</td>   <td>-11931</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.dataSetUp()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&gt;&gt;dataSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
 </table>
