--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TeadDown</td>
+<td>TearDown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
@@ -41,11 +41,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>Test2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>Test1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Test2</td>
+<td>Test3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -62,7 +66,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TeadDown</td>
+<td>TearDown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
