--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,22 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaa1f2">  <td>22/09/17 15:53:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TeadDown()[pri:0, instance:testcases.SimplilearnLogin@4efc180e]">&lt;&lt;TeadDown</td> 
-<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>22/09/17 15:53:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TeadDown()[pri:0, instance:testcases.SimplilearnLogin@4efc180e]">&lt;&lt;TeadDown</td> 
-<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
-<tr bgcolor="94f96a">  <td>22/09/17 15:53:19</td>   <td>-8692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test2()[pri:0, instance:testcases.SimplilearnLogin@4efc180e]">Test2</td> 
-  <td>main@990897274</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>22/09/17 15:53:16</td>   <td>-10823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLogin@4efc180e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>22/09/17 15:53:30</td>   <td>2433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.HomeTest@209da20d]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
-<tr bgcolor="94f96a">  <td>22/09/17 15:53:09</td>   <td>-18457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test1()[pri:0, instance:testcases.SimplilearnLogin@4efc180e]">Test1</td> 
-  <td>main@990897274</td>   <td></td> </tr>
-<tr bgcolor="977460">  <td>22/09/17 15:53:32</td>   <td>4544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.Test1()[pri:0, instance:testcases.HomeTest@209da20d]">Test1</td> 
-  <td>main@990897274</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>22/09/17 15:53:32</td>   <td>4546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TeadDown()[pri:0, instance:testcases.HomeTest@209da20d]">&lt;&lt;TeadDown</td> 
-<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>22/09/17 15:53:16</td>   <td>-10823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:testcases.SimplilearnLogin@4efc180e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@990897274</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>22/09/23 00:01:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.Test1()[pri:0, instance:testcases.HomeTest@7c24b813]">Test1</td> 
+  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="94f96a">  <td>22/09/23 00:00:31</td>   <td>-38490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test1()[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">Test1</td> 
+  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="94f96a">  <td>22/09/23 00:00:43</td>   <td>-26652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test2(java.lang.String,java.lang.String)[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">Test2</td> 
+  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:01:10</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.HomeTest@7c24b813]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="94f96a">  <td>22/09/23 00:01:01</td>   <td>-8745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test3()[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">Test3</td> 
+  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:01:10</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:01:10</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.HomeTest@7c24b813]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:01:10</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:00:59</td>   <td>-10620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:01:10</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:00:59</td>   <td>-10620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:00:59</td>   <td>-10620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:00:28</td>   <td>-41082</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.dataSetUp()[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">&gt;&gt;dataSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>22/09/23 00:01:10</td>   <td>6</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.dataClean()[pri:0, instance:testcases.SimplilearnLogin@1af2d44a]">&lt;&lt;dataClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2032079962</td>   <td></td> </tr>
 </table>
