--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e99d8">  <td>22/09/22 23:53:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
-<tr bgcolor="7787a5">  <td>22/09/22 23:53:24</td>   <td>1833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test3()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">Test3</td> 
-  <td>main@1707582034</td>   <td></td> </tr>
-<tr bgcolor="7e99d8">  <td>22/09/22 23:53:53</td>   <td>30924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
-<tr bgcolor="7e99d8">  <td>22/09/22 23:53:56</td>   <td>33327</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.dataClean()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&lt;&lt;dataClean</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
-<tr bgcolor="7e99d8">  <td>22/09/22 23:53:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
-<tr bgcolor="7787a5">  <td>22/09/22 23:53:13</td>   <td>-9455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLogin.Test1()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">Test1</td> 
-  <td>main@1707582034</td>   <td></td> </tr>
-<tr bgcolor="7e99d8">  <td>22/09/22 23:53:53</td>   <td>30924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
-<tr bgcolor="7e99d8">  <td>22/09/22 23:53:11</td>   <td>-11931</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.dataSetUp()[pri:0, instance:testcases.SimplilearnLogin@614ca7df]">&gt;&gt;dataSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>22/09/23 16:45:12</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.dataClean()[pri:0, instance:testcases.HomeTest@4738a206]">&lt;&lt;dataClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>22/09/23 16:45:09</td>   <td>-2423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.Test1()[pri:0, instance:testcases.HomeTest@4738a206]">Test1</td> 
+  <td>main@1250442005</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>22/09/23 16:45:07</td>   <td>-4797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.HomeTest@4738a206]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>22/09/23 16:45:09</td>   <td>-2415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.HomeTest@4738a206]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>22/09/23 16:45:06</td>   <td>-5187</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.dataSetUp()[pri:0, instance:testcases.HomeTest@4738a206]">&gt;&gt;dataSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
 </table>
